--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,19 @@ dependencies {
     androidTestImplementation "androidx.test:runner:$test_runner_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test:core-ktx:$core_ktx_test_version"
+
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+
+    //Logging Interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+
+    //Mockk
+    testImplementation "io.mockk:mockk:1.10.0"
+
+//    debugImplementation "androidx.fragment:fragment-testing:1.5.1"
+    androidTestImplementation "androidx.test:rules:1.3.0"
+    testImplementation "androidx.test:rules:1.3.0"
+
 }
